crates/plotnik-tests/tests/04-emit/bytecode/binding/sibling_of_alternation_checked.txt
Q = (function_declaration
  (class_declaration)
  [
    (identifier)
    (number)
  ]
)
------------------ DIAGNOSTICS -------------------
error: `class_declaration` cannot be an unlabeled child of `function_declaration`
 --> query.ptk:2:4
  |
1 | Q = (function_declaration
  |      -------------------- `function_declaration` starts here
2 |   (class_declaration)
  |    ^^^^^^^^^^^^^^^^^
  |
help: `function_declaration` has no unlabeled children. Use its grammar fields: `body: (statement_block)`, `name: (identifier)`, `parameters: (formal_parameters)`
